[tool.poetry]
name = "flet-todo"
version = "0.1.0"
description = ""
authors = ["Reynaldo Cuenca Campos <reynaldo86.onwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
